--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <title>The Rick and Morty</title>
+    <link
+      href="https://fonts.googleapis.com/css?family=Jost:400,500,700"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <div id="root"></div>
